@@ -1,3 +1,8 @@
+Release ()
+------------------------------------
+* Tree增加dblclick事件
+* 修正了Tab在IE8下显示不正确
+
 Release (2011-04-15)
 ------------------------------------
 * 增加remove函数中对beforeremove事件结果的判断
